--- a/public/index.html
+++ b/public/index.html
@@ -41,4 +41,4 @@
     -->
   </body>
 </html>
-<!--This is a HTML commant line I love programmig I love Javascript😊😊-->
+<!--This is a HTML commant line  I love HTMl 😊😊-->
